--- a/Português/cyto/cyto.html
+++ b/Português/cyto/cyto.html
@@ -227,7 +227,7 @@
 </head>
 <body>
     <header>
-        <h1>NetSentinel - Topografia da Sub-Rede</h1>
+        <h1>NetSentinel - Topologia da Sub-Rede</h1>
         
         <div class="view-selector">
             <button class="view-btn active" data-view="overview">Visão Geral</button>
